<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="@drawable/shape_head_bg"
            android:clipChildren="false"
            android:orientation="vertical">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_10"
                android:background="@drawable/shape_head_content"
                android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5">

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_car_self" />

            <TextView

                    style="@style/HeadStyle"
                    android:text="@string/text_follow_cap" />

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_one_day" />

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_visa" />

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_tour_self" />
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5">

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_credit_card" />

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_write_car" />

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_borrow_money" />

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_free_run" />

            <TextView
                    style="@style/HeadStyle"
                    android:text="@string/text_more" />
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_5"
                android:background="@color/color_F7F7F7" />
    </LinearLayout>

</LinearLayout>